<resources>
    <string name="app_name">My Contact</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="profile_saved">Profile Saved</string>
    <string name="profile_not_saved">Profile not saved</string>
    <string name="add">Add</string>
    <string name="record_count">No. of Record</string>
    <string name="contact_saved">Contact Saved</string>
</resources>