<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="my.edu.tarc.contact.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_person_add_alt_1_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>