<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="my.edu.tarc.contact.FirstFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_AddFragment"
            app:destination="@id/AddFragment"
            app:popUpTo="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="my.edu.tarc.contact.SecondFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/AddFragment"
        android:name="my.edu.tarc.contact.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />
</navigation>